--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -73,10 +73,6 @@
                   </div>
                 </div>
 
-
-
-
-
                 <div class="col-sm-6">
                   <label class="form-label">Phone</label>
                   <div class="input-wrapper" style="position: relative;">
@@ -94,7 +90,7 @@
                     </ng-template>
 
                     <!-- Phone input field -->
-                    <input type="text" formControlName="phone" autocomplete="off" placeholder="phone number" style="background-color: #FFFFFF; border: 1px solid #181717; border-radius: 20px; color: #131212;
+                    <input type="number" formControlName="phone" autocomplete="off" placeholder="phone number" style="background-color: #FFFFFF; border: 1px solid #181717; border-radius: 20px; color: #131212;
                         padding: 10px 10px 10px 50px; width: 100%; box-sizing: border-box;" required />
                   </div>
                 </div>
@@ -175,7 +171,7 @@
                     <select formControlName="position"
                       style="background-color: #FFFFFF; border: 1px solid #181717; border-radius: 20px; color: #131212; padding: 10px 10px 10px 40px; width: 100%; box-sizing: border-box; appearance: none;"
                       required>
-                      <option value="" selected>Select Position left</option>
+                      <option value="" selected>Select Position</option>
                       <option value="Right">Right</option>
                       <option value="Left">Left</option>
                       <!-- Add more countries as needed -->
