--- a/src/app/deposit/deposit.component.html
+++ b/src/app/deposit/deposit.component.html
@@ -4,31 +4,37 @@
     </button>
 </div>
 
-    <h2 class="fw-bold">Deposit Funds</h2>
-    <table>
+    <h4 class="fw-bold">Deposit Funds</h4>
+
+ <div class="card table-responsive">
+     <table class="table">
         <thead>
             <tr>           
                 <th>S.No</th>
+                <th>Date</th>
                 <th>Amount</th>
-                <th>Transaction ID</th>
-                <th>From → To</th>
-                <th>Value</th>
+                <th>Txn Id</th>
                 <th>Status</th>
-                <th>Time</th>
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td><span class="transaction">0x90ef...0607</span></td>
-                <td>0x37e9...d762 → 0x0000...1000</td>
+            <!-- <tr>
+                <td><span class="transaction">1</span></td>
+                <td>12/05/2025</td>
                 <td><span class="value">0.0026 BNB</span></td>
                 <td>56062318</td>
-                <td>56062318</td>
-                <td>56062318</td>
-                <td>2 minutes ago</td>
+                <td>Success</td>
             </tr>
+             <tr>
+                <td><span class="transaction">2</span></td>
+                <td>12/05/2025</td>
+                <td><span class="value">0.0026 BNB</span></td>
+                <td>56062318</td>
+                <td>Success</td>
+            </tr> -->
         </tbody>
     </table>
+ </div>
 
     <div class="modal fade" id="addFundModal" tabindex="-1" aria-labelledby="addFundModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered ">
