--- a/src/app/transfer/transfer.component.html
+++ b/src/app/transfer/transfer.component.html
@@ -1,14 +1,14 @@
 <!-- Self Transfer Section -->
-<div class="container-fluid">
+<div class="card container-fluid">
   <div class="d-flex mt-4 align-items-center mb-4 gap-1">
     <h4 class="fw-bold">Self Transfer</h4>
-    <button class="buy-btn" data-bs-toggle="modal" data-bs-target="#selfTransferModal">
+    <button class="btn btn-sm btn-success" data-bs-toggle="modal" data-bs-target="#selfTransferModal">
       <i class="fa-solid fa-money-bill-transfer"></i> Self Transfer
     </button>
   </div>
 
   <div class="container-fluid mt-3">
-    <h5 class="fw-semibold mb-4">Self Transfer</h5>
+    <!-- <h5 class="fw-semibold mb-4">Self Transfer</h5> -->
     <div class="transaction-table">
       <div class="table-responsive">
         <table class="table align-middle text-nowrap">
@@ -16,9 +16,7 @@
             <tr>
               <th class="fw-bold">S.no</th>
               <th class="fw-bold">Date</th>
-              <th class="fw-bold">Registration ID</th>
-              <th class="fw-bold">Name</th>
-              <th class="fw-bold">Subscription Amount</th>
+              <th class="fw-bold">Amount</th>
             </tr>
           </thead>
           <tbody>
@@ -31,17 +29,17 @@
 </div>
 
 <!-- Wallet Transfer Section -->
-<div class="container-fluid">
+<div class="card container-fluid mt-2">
   <div class="d-flex mt-4 align-items-center mb-4 gap-1">
     <h4 class="fw-bold">Wallet Transfer</h4>
-    <button class="buy-btn" data-bs-toggle="modal" data-bs-target="#walletTransferModal">
+    <button class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#walletTransferModal">
       <i class="fa-solid fa-money-bill-transfer"></i> Wallet Transfer
     </button>
   </div>
 
   <div class="container-fluid mt-3">
-    <h5 class="fw-semibold mb-4">Wallet Transfer</h5>
-    <div class="card shadow-sm rounded-4 p-3 border-0">
+    <!-- <h5 class="fw-semibold mb-4">Wallet Transfer</h5> -->
+    <div class=" shadow-sm rounded-4 p-3 border-0">
       <div class="table-responsive">
         <table class="table  align-middle text-nowrap">
           <thead class="text-secondary fw-semibold" style="border-bottom: 1px solid #dee2e6;">
