--- a/src/app/withdraw/withdraw.component.html
+++ b/src/app/withdraw/withdraw.component.html
@@ -8,8 +8,10 @@
   </div>
   
 
-    <h2 class="fw-bold">Withdraw Funds</h2>
-    <table>
+    <h4 class="fw-bold">Withdraw Funds</h4>
+   
+<div class="table-responsive">
+   <table class="table">
         <thead>
             <tr>           
                 <th>S.No</th>
@@ -17,31 +19,21 @@
                 <th>Amount</th>
                 <th>Transfer ID</th>
                 <th>Wallet Address</th>
-
-                <th>From → To</th>
-                <th>Value</th>
                 <th>Status</th>
-                <th>Time</th>
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td><span class="transaction">0x90ef...0607</span></td>
-                <td>0x37e9...d762 → 0x0000...1000</td>
+            <!-- <tr>
+                <td><span class="transaction">1</span></td>
+                <td>12/08/2025</td>
                 <td><span class="value">0.0026 BNB</span></td>
                 <td>56062318</td>
-                <td>56062318</td>
-                <td>56062318</td>
-                <td>2 minutes ago</td>
-            </tr>
+                <td>56062318xdfss</td>
+                <td>Success</td>
+            </tr> -->
         </tbody>
     </table>
-
-    
-
-
-
-      
+</div>
 
   <div class="modal fade" id="withdrawModal" tabindex="-1" aria-labelledby="withdrawModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
