--- a/src/app/received/received.component.html
+++ b/src/app/received/received.component.html
@@ -1,11 +1,11 @@
-<div class="container-fluid">
-  <div class="d-flex mt-4 align-items-center mb-4 gap-1">
-    <h4 class="fw-bold">received wallet <i class="fa-solid fa-arrow-down-short-wide"></i>
+<div class="card container-fluid">
+  <div class="d-flex mt-4 align-items-center ">
+    <h4 class="fw-bold">Received wallet <i class="fa-solid fa-arrow-down-short-wide"></i>
    </h4>
   </div>
 
   <div class="container-fluid mt-3">
-    <div class="card shadow-sm rounded-4 p-3 border-0">
+    <div class="shadow-sm rounded-4 p-3 border-0">
       <div class="table-responsive">
         <table class="table  align-middle text-nowrap">
           <thead class="text-secondary fw-semibold" style="border-bottom: 1px solid #dee2e6;">
